# cpp-to-py

./: CMakeLists.txt  README.md  cpp-in-python.cpp  ctypes_test.py  makefile  mult.cpp  pyvenv.cfg
clib/: CMakeLists.txt
clib/include/: cppmath.hpp
clib/src/: cppmath.cpp
